# progetto-finale-lab-programmazione

./: .gitignore  CMakeLists.txt  README.md  main.cpp
data/: Highway.txt  Passages.txt  Runs.txt
include/: Simulatore.h  Tutor.h
src/: Simulatore.cpp  Tutor.cpp  main.cpp  main_tutor.cpp
